--- a/index.html
+++ b/index.html
@@ -3,12 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Mini-övning</title>
+
+    <!--Länkar till CSS-filen som bestämmer hur sidan ser ut (färger, typsnitt)-->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<!--Rubriken på sidan. JavaScript kommer senare kunna ändra färgen på denna-->
 <h1 id="title">Hej, välkommen till min sida!</h1>
+
+<!--En knapp som användaren kan klicka på.
+     När den klickas kör JavaScript en funktion som byter färg på rubriken-->
 <button id="colorButton">Byt färg</button>
 
+<!--Länkar till JavaScript-filen.
+     Den laddas sist så att HTML-elementen finns i minnet när koden körs-->
 <script src="app.js"></script>
+
 </body>
 </html>
+
+
+<!--Förklaring:
+- HTML skapar sidans struktur (rubrik + knapp).
+- CSS styr utseendet (färg och textstil).
+- JavaScript ger interaktivitet .-->
+
